ingress/mongodb-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
spec:
  type: NodePort
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
  selector:
    app: mongodb
    appFor: treinamento
    version: develop
    canary: A

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: mongodb
    appFor: treinamento
    version: develop
    canary: A
spec:
  replicas: 1
  strategy:  
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  minReadySeconds: 0
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 3
  selector:
    matchLabels:
      app: mongodb
      appFor: treinamento
      version: develop
      canary: A
  template:
    metadata:
      labels:
        app: mongodb
        appFor: treinamento
        version: develop
        canary: A
    spec:
      restartPolicy: Always
      containers:
      - name: mongodb-container
        image: mongo:3.5
        ports:
          - name: mongo-port
            containerPort: 27017
            protocol: TCP
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "0.005"
            memory: "10Mi"
          limits:
            cpu: "1"
            memory: "600Mi"
