ingress/nginx-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  labels:
    app: nginx
    appFor: test-ingress
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx
    appFor: test-ingress
  type: NodePort

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
    appFor: test-ingress
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  minReadySeconds: 1
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 3
  selector:
    matchLabels:
      app: nginx
      appFor: test-ingress
  template:
    metadata:
      labels:
        app: nginx
        appFor: test-ingress
    spec:
      restartPolicy: Always
      containers:
      - name: nginx-container
        image: nginx
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: "5Mi"
          limits:
            memory: "100Mi"
